--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,6 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# URL check logs (keep UNRESOLVED.md for tracking)
+logs/url-checks/*.log
