--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,6 @@ requires-python = ">=3.14"
 dependencies = [
     "skills-ref>=0.1.1",
 ]
+
+[tool.uv.sources]
+skills-ref = { git = "https://github.com/agentskills/agentskills.git", subdirectory = "skills-ref" }
